Treat ad-hoc connections as normal wifi connections in connection list.

BUG: 280701